# simple_2fa

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build_package.sh  dev_run.sh  release-please-config.json  requirements.txt  run.sh
.github/workflows/: release.yml  tauri-build.yml
backend/app/: database.py  main.py
backend/app/api/: models.py  routes.py
backend/app/core/: totp.py
backend/tests/: conftest.py  test_api.py  test_secret_leak.py  test_totp.py
backup/: .dockerignore  requirements.txt
backup/backend/: mcp_server.py
backup/backend/app/: main.py
backup/backend/tests/: test_api.py
docs/: migration-to-pure-react.md
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
frontend_react/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend_react/src/: App.jsx  App.tsx  i18n.ts  index.css  main.tsx  tauriApi.ts  types.ts  vite-env.d.ts
frontend_react/src-tauri/: Cargo.toml  tauri.conf.json
frontend_react/src-tauri/capabilities/: default.json
frontend_react/src-tauri/icons/: icon.icns
frontend_react/src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  totp.rs
frontend_react/src/components/: AccountCard.jsx  AccountCard.tsx  AccountList.jsx  AccountList.tsx  AccountSelectDialog.tsx  AddAccountModal.jsx  AddAccountModal.tsx  PasswordDialog.tsx
frontend_react/src/locales/: en.json  ja.json  zh-CN.json
frontend_react/src/security/: crypto.ts  storage.ts
planning/: implementation_plan.md  task.md  walkthrough.md
(+7 files in other folders)
