[package]
name = "simple-2fa"
version = "0.1.0"
description = "Simple 2FA Authenticator - Tauri Desktop App"
authors = ["niko"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
totp-rs = { version = "5.7", features = ["otpauth", "serde"] }
thiserror = "2"
base32 = "0.5"

[dev-dependencies]
tempfile = "3"
